--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </html>
 <body>
     <main>
-        <h1>freebird</h1>
-        <h2>gary rossington</h2>
-        <p>lord i cant change free bird yeahhhhhhhh</p>
+        <h1>Earnhardt Education Group</h1>
+        <h2>Educating the Worlds Youth</h2>
+        
     </main>
 </body>
