--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Earnhardt Education Group</title>
     <link rel="stylesheet" href="mvp.css">
   </head>
   <body>
     <h1>Earnhardt Education Group</h1>
-    <h2>Educating the Worlds Youth</h2>
+    <h2>Contact Information</h2>
     <script src="index.js"></script>
   </body>
 </html>
 <body>
     <main>
-        
+        <p><img src="students.png" alt="students">Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
     </main>
 </body>
