--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   <body>
     <h1>Earnhardt Education Group</h1>
     <h2>Contact Information</h2>
+    <img src="students.png" alt="students">
     <script src="index.js"></script>
   </body>
 </html>
 <body>
     <main>
-        <p><img src="students.png" alt="students">Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+        <p><Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
     </main>
 </body>
