--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 </html>
 <body>
     <main>
-        <p><Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+        <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
     </main>
 </body>
