--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Earnhardt Education Group</h1>
     <h2>Contact Information</h2>
-    <img src="students.png" alt="students">
+    <img alt="students" src="students.png">
     <script src="index.js"></script>
   </body>
 </html>
