--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
   <body>
     <h1>Earnhardt Education Group</h1>
-    <h2>Contact Information</h2>
-    <img alt="students" src="students.png">
+    <h2>Contact Information</h2>\
+    <h3>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</h3>
+    <img alt=" " src="students.png">
     <script src="index.js"></script>
   </body>
 </html>
 <body>
     <main>
-        <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+        
     </main>
 </body>
