--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <h1>Earnhardt Education Group</h1>
-    <h2>Contact Information</h2>\
+    <h2>Contact Information</h2>
+    <img src="students.png" alt=" ">
     <h3>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</h3>
-    <img alt=" " src="students.png">
     <script src="index.js"></script>
   </body>
 </html>
