--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <h1>Earnhardt Education Group</h1>
     <h2>Contact Information</h2>
     <h3>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</h3>
-    <script src="index.js"></script>
-  </body>
-</html>
-<body>
     <main>
         <img src="students.png" alt=" ">
     </main>
-</body>
+    <script> src="index.js"</script>
+    </body>
+</html>
