--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   </head>
   <body>
     <h1>Earnhardt Education Group</h1>
+    <img src="students.png" alt="students">
     <h2>Contact Information</h2>
-    <h3>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</h3>
-    <main>
-        <img src="students.png" alt=" ">
-    </main>
+    <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
     </body>
 </html>
