--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link rel="stylesheet" href="mvp.css">
   </head>
   <body>
-    <h1>Earnhardt Education Group</h1>
-    <img src="students.png" alt="students">
-    <h2>Contact Information</h2>
-    <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+    <main>
+        <h1>Earnhardt Education Group</h1>
+        <img src="students.png" alt="students">
+        <h2>Contact Information</h2>
+        <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+    </main>
     </body>
 </html>
