--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main>
         <h1>Earnhardt Education Group</h1>
-        <img src="students.png" alt="students">
+        <img src="images/students.png" alt="students">
         <h2>Contact Information</h2>
         <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
     </main>
