--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <h1>Earnhardt Education Group</h1>
         <img src="images/students.png" alt="students">
         <h2>Contact Information</h2>
-        <p>Earnhardt Education Group strives to make improvments in all things academia for the nations youth.</p>
+        <p>Email: earnhardt@group@edu</p>
+        <p>Phone: 555.555.5555</p>
+        <p>Address: 1234 Spartan Way, East Lansing, MI, 48823</p>
+
     </main>
     </body>
 </html>
