--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <img src="images/students.png" alt="students">
         <h2>Contact Information</h2>
         <p>Email: earnhardt@group@edu</p>
-        <p>Phone: 555.555.5555</p>
+        <p>Phone: (555)555-5555</p>
         <p>Address: 1234 Spartan Way, East Lansing, MI, 48823</p>
-
+        <h3>Locations</h3>
+        <li>East Lansing, MI</li>
+        <li>Ann Arbor, MI</li>
+        <li>Mount Pleasant, MI</li>
+        <li>Rocky Top, TN</li>
     </main>
     </body>
 </html>
