--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
         </label>
         <select name="options" id="reason">
             <option value="">--Please Choose an Option</option>
-            <option value="Saying Hi">Saying Hi</option>
-            <option value="Looking for a Contractor">Looking For a Contractor</option>
+            <option value="Customer Support">Customer Support</option>
+            <option value="Looking for a Agent">Looking For a Agent</option>
             <option value="Interested in a Interview">Interested in a Interview</option>
         </select><br>
         <label>Open Comment</label>
         <textarea name="opencomment" cols="30" rows="10"></textarea><br>
         <button>Submit Form</button>
-        
     </form>
     </main>
     </body>
