--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <h1>Earnhardt Education Group</h1>
         <img src="images/students.png" alt="students">
-        <blockquote>"Earnhard Education...Improving our youth's education one left turn at a time."
+        <blockquote><i>"Earnhard Education...Improving our youth's education one left turn at a time."</i>
         </blockquote>
         <h2>Contact Information</h2>
         <p>Email: earnhardt@group@edu</p>
