--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
         <li>Mount Pleasant, MI</li>
         <li>Rocky Top, TN</li>
         <h4>Scedule a Meeting!</h4>
-        <label>Name
-            <input type="text">
-        </label><br>
-        <label>Email Address
-            <input type="text">
-        </label><br>
-        <label for="reason">Reason For Contact:<br>
-        </label>
-        <select name="options" id="reason">
-            <option value="">--Please Choose an Option</option>
-            <option value="Customer Support">Customer Support</option>
-            <option value="Looking for a Agent">Looking For a Agent</option>
-            <option value="Interested in a Interview">Interested in a Interview</option>
-        </select><br>
-        <label>Open Comment</label>
-        <textarea name="opencomment" cols="30" rows="10"></textarea><br>
-        <button>Submit Form</button>
+        <form>
+            <label>Name
+                <input type="text">
+            </label><br>
+            <label>Email Address
+                <input type="text">
+            </label><br>
+            <label for="reason">Reason For Contact:<br>
+            </label>
+            <select name="options" id="reason">
+                <option value="">--Please Choose an Option</option>
+                <option value="Customer Support">Customer Support</option>
+                <option value="Looking for a Agent">Looking For a Agent</option>
+                <option value="Interested in a Interview">Interested in a Interview</option>
+            </select><br>
+            <label>Open Comment</label>
+            <textarea name="opencomment" cols="30" rows="10"></textarea><br>
+            <button>Submit Form</button>
+        </form>
     </main>
     </body>
 </html>
