--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <textarea name="opencomment" cols="30" rows="10"></textarea><br>
             <button>Submit Form</button>
         </form>
+        <h5>Prompt Screenshot From Sharpen.Design Generator</h5>
+        <img src="images/prompt.png" alt="prompt">
     </main>
     </body>
 </html>
