--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <button>Submit Form</button>
         </form>
         <h5>Prompt Screenshot From Sharpen.Design Generator</h5>
-        <img src="images/prompt.png" alt="prompt">
+        <img src="images/prompt.png" alt="prompt" class="prompt">
     </main>
     </body>
 </html>
