--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Earnhardt Education Group</title>
+    <title>Earnhardt Learning Group</title>
     <link rel="stylesheet" href="mvp.css">
   </head>
   <body>
     <main>
-        <h1>Earnhardt Education Group</h1>
+        <h1>Earnhardt Learning Group</h1>
         <img src="images/students.png" alt="students">
-        <blockquote><i>"Earnhard Education...Improving our youth's education one left turn at a time."</i>
+        <blockquote><i>"Earnhard Learning Group...Improving our youth's education one left turn at a time."</i>
         </blockquote>
         <h2>Contact Information</h2>
         <p>Email: earnhardt@group@edu</p>
